--- a/styles/style.css
+++ b/styles/style.css
@@ -58,6 +58,7 @@ table {
     padding: 10px;
     margin: 25px 0px 25px 0px;
     border-radius: 5px;
+    display: none;
 }
 
 .restart:hover {
@@ -82,6 +83,12 @@ h2 {
 
 main h4 {
     margin-top: 30px;
+}
+
+#messageLine {
+    font-size: 20px;
+    text-align: center;
+
 }
 
 h4 {
@@ -123,6 +130,10 @@ tbody tr td:not(:first-child) {
 
     tbody td:nth-child(even) {
         display: block;
+    }
+
+    #messageLine {
+        font-size: 25px;
     }
 }
 
